--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Custom CSS shapes</title>
+  <title>CSS shapes</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+
+  <div class="shape-1">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="shape-2">
+    <div>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+  <div class="shape-3">
+    <div>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+  <div class="shape-4"></div>
+  <div class="shape-5"></div>
+  <div class="shape-6"></div>
+  <div class="shape-7"></div>
+  <div class="shape-8"></div>
+  <div class="shape-9"></div>
+  <div class="shape-10"></div>
+  <div class="shape-11"></div>
+  <div class="shape-12"></div>
+  <div class="shape-13"></div>
+  <div class="shape-14"></div>
+  <div class="shape-15"></div>
+
 </body>
 </html>
