--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
     <span></span>
     <span></span>
   </div>
-  <div class="shape-5"></div>
+  <div class="shape-5">
+    <div>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
   <div class="shape-6"></div>
   <div class="shape-7"></div>
   <div class="shape-8"></div>
