--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       <span></span>
     </div>
   </div>
-  <div class="shape-6"></div>
+  <div class="shape-6">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
   <div class="shape-7"></div>
   <div class="shape-8"></div>
   <div class="shape-9"></div>
