--- a/index.html
+++ b/index.html
@@ -9,62 +9,52 @@
 <body>
 
   <div class="shape-1">
-    <span></span>
-    <span></span>
-    <span></span>
+    <span></span><span></span><span></span>
   </div>
   <div class="shape-2">
     <div>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span>
+      <span></span><span></span><span></span>
       <span></span>
     </div>
   </div>
   <div class="shape-3">
     <div>
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span>
     </div>
     <div>
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span>
     </div>
   </div>
   <div class="shape-4">
-    <span></span>
-    <span></span>
-    <span></span>
+    <span></span><span></span><span></span>
   </div>
   <div class="shape-5">
     <div>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span><span></span>
     </div>
   </div>
   <div class="shape-6">
-    <span></span>
-    <span></span>
-    <span></span>
+    <span></span><span></span><span></span>
   </div>
   <div class="shape-7">
     <div>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span><span></span><span></span>
     </div>
   </div>
-  <div class="shape-8"></div>
-  <div class="shape-9"></div>
+  <div class="shape-8">
+    <div>
+    </div>
+    <div>
+      <span></span><span></span>
+    </div>
+    <div></div>
+  </div>
+  <div class="shape-9">
+    <div>
+      <span></span><span></span>
+    </div>
+  </div>
   <div class="shape-10"></div>
   <div class="shape-11"></div>
   <div class="shape-12"></div>
