--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
     <div></div>
   </div>
   <div class="shape-9">
-    <div>
-      <span></span><span></span>
-    </div>
+    <span></span>
   </div>
   <div class="shape-10"></div>
   <div class="shape-11"></div>
