--- a/index.html
+++ b/index.html
@@ -53,12 +53,44 @@
   <div class="shape-9">
     <span></span>
   </div>
-  <div class="shape-10"></div>
-  <div class="shape-11"></div>
-  <div class="shape-12"></div>
-  <div class="shape-13"></div>
-  <div class="shape-14"></div>
-  <div class="shape-15"></div>
+  <div class="shape-10">
+    <div>
+      <span></span><span></span>
+    </div>
+    <div>
+      <span></span><span></span><span></span><span></span>
+    </div>
+  </div>
+  <div class="shape-11">
+    <div></div>
+    <div>
+      <span></span><span></span><span></span>
+    </div>
+    <div></div>
+  </div>
+  <div class="shape-12">
+    <span></span><span></span>
+  </div>
+  <div class="shape-13">
+    <div>
+      <span></span>
+    </div>
+    <div>
+      <span></span>
+    </div>
+    <div></div>
+    <div>
+      <span></span><span></span>
+    </div>
+  </div>
+  <div class="shape-14">
+    <div>
+      <span></span><span></span><span></span>
+    </div>
+  </div>
+  <div class="shape-15">
+    <span></span><span></span>
+  </div>
 
 </body>
 </html>
